# eternacore

./: .gitignore  Cargo.toml  eternacore.toml.example  rustmon.cmd  rustmon.ps1  rustmon.sh
src/: config.rs  handler.rs  lib.rs  logger.rs  main.rs
src/commands/: mod.rs  ping.rs  purge.rs
src/commands/framework/: command.rs  message.rs  mod.rs  request.rs  response.rs
