[package]
name = "eternacore"
authors = ["Egor Poleshko <somedevfox@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
log               = { version = "0.4.17", features = ["std"] }   	  # Logging facade
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } # Async I/O Runtime
serde             = "1"        										  # (De)serialization framework (Required for config)
once_cell         = "1.17.1"                                          # Global variables

# Discord API Wrapper
[dependencies.serenity]
version          = "0.11.5"
default-features = false
features         = ["client", "gateway", "rustls_backend", "model"]

# Configuration
[dependencies.figment]
version = "0.10.8"
features = [
	"env",
	"json",
	"toml"
]